增加波浪分隔自定义视图

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,12 +7,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/iv_test_anim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:background="@anim/find_wait_load_img"
+        android:contentDescription="@string/none"
         />
-</RelativeLayout>
+
+    <!-- android:background 为主浪的颜色 -->
+    <com.wzhnsc.testframeanimation.WavingDividingStrip
+        xmlns:WavingDividingStrip="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:background="#00c695"
+        WavingDividingStrip:amplitude="30dp"
+        WavingDividingStrip:waveSurfaceVelocity="80"
+        WavingDividingStrip:waveBaseVelocity="80"
+        WavingDividingStrip:sideWaveColor="#770000cc"
+        WavingDividingStrip:skyColor="#00bbcc"
+        />
+
+</LinearLayout>
