增加圆形或圆角矩形自定义ImageView

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -31,4 +31,29 @@
 
     </declare-styleable>
 
+    <declare-styleable name="CircularImageView">
+
+        <attr
+            name="cornerRadius"
+            format="dimension"
+            />
+
+        <attr
+            name="shapeType"
+            >
+
+            <enum
+                name="circular_shape"
+                value="0"
+                />
+
+            <enum
+                name="circular_bead"
+                value="1"
+                />
+
+        </attr>
+
+    </declare-styleable>
+
 </resources>
