--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <ImageView
         android:id="@+id/iv_test_anim"
@@ -30,6 +31,24 @@
         WavingDividingStrip:waveBaseVelocity="80"
         WavingDividingStrip:sideWaveColor="#770000cc"
         WavingDividingStrip:skyColor="#00bbcc"
+        />
+
+    <com.wzhnsc.testframeanimation.CircularImageView
+        xmlns:CircularImageView="http://schemas.android.com/apk/res-auto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="13dp"
+        android:src="@drawable/photo"
+        CircularImageView:shapeType="circular_shape"
+        />
+
+    <com.wzhnsc.testframeanimation.CircularImageView
+        xmlns:CircularImageView="http://schemas.android.com/apk/res-auto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="13dp"
+        android:src="@drawable/photo"
+        CircularImageView:shapeType="circular_bead"
         />
 
 </LinearLayout>
