--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="30dp"
     android:orientation="vertical"
     tools:context=".MainActivity"
     >
@@ -44,9 +41,11 @@
 
     <com.wzhnsc.testframeanimation.CircularImageView
         xmlns:CircularImageView="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/civ_photo"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="13dp"
+        android:layout_gravity="end"
         android:src="@drawable/photo"
         CircularImageView:shapeType="circular_bead"
         />
